--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -10,3 +10,16 @@ eu também tivesse uma classe .home no header, o css só vai aplicar no header p
     height: 120px;
     max-width: 1080px;
 }
+.title{
+    font-family: "Bebas Neue";
+    font-weight: bold;
+    font-style: normal;
+    font-size: 90px;
+    font-style: italic;
+    color: rgb(148, 148, 148);
+    transition: 0.5s ease-in-out;
+}
+
+.title:hover{
+    color: #f9f295;
+}
